# Personal-Class-Management-System

./: .gitignore  .gitignore.save  Bugs.txt  CMakeLists.txt  README.md  attendance_tracker.cpp  attendance_tracker.h  grade_tracker.cpp  grade_tracker.h  main.cpp  main_menu_display.h  schedule_management.cpp  schedule_management.h
Code-review/: Hania-review.md  Hania-test-review.cpp
features/: schedule_management.h
include/: attendance_menu.h  attendance_tracker.h  course_management.h  grade_tracker.h  main_menu.h  main_menu_display.h  menu.h  schedule_management.h  schedule_menu.h
src/: attendance_menu.cpp  attendance_tracker.cpp  course_management.cpp  course_management.h  grade_tracker.cpp  main_menu.cpp  main_menu_display.cpp  menu.cpp  schedule_management.cpp  schedule_menu.cpp
src/features/: attendance_tracker.h  schedule_management.cpp
src/utils/: ensure_data_directory.cpp  utils.cpp  utils.h
tests/: grade_tracker_test.cpp  test_course_management.cpp  test_schedule.cpp
utils/: attendance_tracker.cpp  ensure_data_directory.cpp  ensure_data_directory.h  grade_tracker.cpp  main_menu_display.cpp  main_menu_display.h  schedule_management.cpp  schedule_management.h
